Fixes Slick buttons and dots on iOS and small screen devices

--- a/css/sidebar-menu.css
+++ b/css/sidebar-menu.css
@@ -7,7 +7,8 @@
     z-index: 999999;
     width: 312px;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     background: #0D6078;
     color: #fff;
     text-align: left;
