--- a/style.css
+++ b/style.css
@@ -1837,7 +1837,6 @@ input[type="search"]::-webkit-search-cancel-button {
 	opacity: 0.8;
 	position: absolute;
 	display: block;
-	line-height: 1;
 	font-size: 0;
 	cursor: pointer;
 	background: transparent;
@@ -1910,13 +1909,14 @@ img.faq-img {
 .slick-slider { margin-bottom: 30px; }
 
 .slick-dots {
-    position: absolute;
-    bottom: -22px;
-    list-style: none;
-    display: block;
-    text-align: right;
-    padding: 0;
-    width: 100%;
+	position: absolute;
+	bottom: -22px;
+	list-style: none;
+	display: block;
+	text-align: right;
+	padding: 0;
+	width: 100%;
+	white-space: nowrap;
 }
 
 .slick-dots li {
@@ -1928,6 +1928,11 @@ img.faq-img {
     padding: 0;
     cursor: pointer;
     background-color: #d9d9d9;
+}
+@media (max-width: 350px) {
+	.slick-dots li {
+		width: 36px;
+	}
 }
 .slick-dots li:last-child {
     margin-right: 0;
